Fix OGP image URL

--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -15,4 +15,4 @@
 <meta name="twitter:creator" content="@JD2xor" />
 
 <meta property="og:url" content="{{ .Permalink }}" />
-<meta property="og:image" content="/images/ogp.png" />
+<meta property="og:image" content="{{ .Site.BaseURL }}/images/ogp.png" />
