--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,7 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-            Powered by Hugo
+          © 2020 JD2xor - Powered by Hugo
         </footer>
       </div>
     </div>
