--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -14,7 +14,9 @@
       </article>
     </div>
   </section>
-  <div class="container">
+</div>
+<div class="container">
+  <div class="disqus">
     {{ template "_internal/disqus.html" . }}
   </div>
 </div>
