--- a/layouts/shortcodes/steam.html
+++ b/layouts/shortcodes/steam.html
@@ -1,3 +1,5 @@
-<div class="embed-steam">
-  <iframe src="https://store.steampowered.com/widget/{{ .Get 0 }}/" frameborder="0"></iframe>
+<div class="embed-steam-wrapper">
+  <div class="embed-steam">
+    <iframe src="https://store.steampowered.com/widget/{{ .Get 0 }}/" frameborder="0"></iframe>
+  </div>
 </div>
