--- a/layouts/partials/post-metadata-single.html
+++ b/layouts/partials/post-metadata-single.html
@@ -1,5 +1,5 @@
 <!-- supports emoji -->
-<h1 class="title"><a href="{{ .Permalink }}">{{ .Title | emojify }}</a>{{ if .Draft }} ::Draft{{ end }}</h1>
+<h1 class="title">{{ .Title | emojify }}{{ if .Draft }}::Draft{{ end }}</h1>
 <div class="post-metadata">
     {{ if (ne ($.Param "displayauthor") false) }}
         <small class="text-muted">by {{ .Params.author | default .Site.Params.author }}</small>
