Modify link widget to support non-image

--- a/layouts/shortcodes/link-widget.html
+++ b/layouts/shortcodes/link-widget.html
@@ -15,6 +15,10 @@
 
     {{ if $image }}
     <div class="link-widget-thumbnail" style="background-image: url({{ $image }});"></div>
+    {{ else }}
+    <div class="link-widget-no-img">
+      <i class="fa fa-file-text-o" aria-hidden="true"></i>
+    </div>
     {{ end }}
 
   </a>
