--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,7 +3,7 @@
 <div class="container">
   <section class="section">
     <div class="container">
-      <article class="article">
+      <article>
         {{ partial "post-metadata-single" . }}
         <div class="content">
           {{ partial "banner" . }}
