--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -96,7 +96,7 @@ table {
     vertical-align: middle;
     width: 280px;
     font-size: 3.5rem;
-    color: #d0d0d0;
+    color: $cupronickel;
     text-align: center;
 
     @include mobile {
