--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -268,6 +268,11 @@ nav {
   }
 }
 
+.article {
+  padding-bottom: 1rem;
+  border-bottom: 1px solid $cupronickel;
+}
+
 .title {
   border: none;
 }
