--- a/layouts/partials/post-metadata-list.html
+++ b/layouts/partials/post-metadata-list.html
@@ -2,7 +2,7 @@
 <h2 class="title"><a href="{{ .Permalink }}">{{ .Title | emojify }}</a>{{ if .Draft }}::Draft{{ end }}</h2>
 <div class="post-metadata">
   <p class="text-muted">{{ .Params.subtitle }}</p>
-  <p class="text-muted"><i class="fa fa-calendar" aria-hidden="true"></i> {{ .Date.Format "January 2, 2006" }}</p>
+  <div class="text-muted"><i class="fa fa-calendar" aria-hidden="true"></i> {{ .Date.Format "January 2, 2006" }}</div>
   {{ if .Params.tags }}
     {{ partial "tags" .Params.tags }}
   {{ end }}
