--- a/layouts/partials/post-metadata-single.html
+++ b/layouts/partials/post-metadata-single.html
@@ -4,8 +4,8 @@
     {{ if (ne ($.Param "displayauthor") false) }}
         <small class="text-muted">by {{ .Params.author | default .Site.Params.author }}</small>
     {{ end }}
-    <p class="text-muted"><i class="fa fa-calendar" aria-hidden="true"></i> {{ .Date.Format "January 2, 2006" }}</p>
     <p class="text-muted">{{ .Params.subtitle }}</p>
+    <div class="text-muted"><i class="fa fa-calendar" aria-hidden="true"></i> {{ .Date.Format "January 2, 2006" }}</div>
     {{ if .Params.tags }}
         {{ partial "tags" .Params.tags }}
     {{ end }}
