--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -1,5 +1,3 @@
 {{ if .Params.banner }}
-<div class="well post-banner" style="background-image: url({{.Permalink}}{{.Params.banner}});">
-        <!-- <img class="banner-img" src="{{ . }}" alt=""></img> -->
-</div>
+<div class="well post-banner" style="background-image: url({{.Permalink}}{{.Params.banner}});"></div>
 {{ end }}
