Add share button

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -14,6 +14,7 @@
       </article>
     </div>
   </section>
+  {{ partial "share-button" . }}
 </div>
 <div class="container">
   <div class="disqus">
