--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -100,7 +100,8 @@ strong, b {
 }
 
 img {
-  max-width: 100%;
+  width: 100%;
+  max-width: 900px;
 }
 
 /* Fixes images in popup boxes from Google Translate */
