--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -54,7 +54,7 @@ table {
 
     .link-widget-title {
       display: block;
-      max-height: 45px;
+      height: 45px;
       margin: 0.25em 0 0.5em 0;
       font-size: 16px;
       color: $darkGray;
@@ -63,7 +63,7 @@ table {
     
     .link-widget-description {
       display: block;
-      max-height: 34px;
+      height: 34px;
       margin-bottom: 0.5em;
       color: $gray;
       overflow: hidden;
@@ -71,7 +71,7 @@ table {
     
     .link-widget-host {
       display: block;
-      max-height: 17px;
+      height: 17px;
       color: $darkGray;
       overflow: hidden;
     }
