--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -10,6 +10,7 @@
       <nav>
         <a href="/">Home</a>
         <a href="/categories">Categories</a>
+        <a href="/tags">Tags</a>
       </nav>
     </header>
   </div>
