Add archives terms & archives list

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -11,6 +11,7 @@
         <a href="/">Home</a>
         <a href="/categories">Categories</a>
         <a href="/tags">Tags</a>
+        <a href="/archives">Archives</a>
       </nav>
     </header>
   </div>
