--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -286,12 +286,16 @@ nav {
   border: none;
 }
 
+.text-muted {
+  margin-top: 5px;
+}
+
 .fa-calendar {
   padding-right: 5px;
 }
 
-.tags {
-  margin-top: 0.5rem;
+.fa-folder {
+  padding-right: 3px;
 }
 
 .content {
