Modify to show taxonomy terms as it is

--- a/layouts/categories/terms.html
+++ b/layouts/categories/terms.html
@@ -6,8 +6,8 @@
 
     <div>
       <ul>
-        {{ range $name, $taxonomy := .Site.Taxonomies.categories }}
-          <li><a href="{{ "/categories/" | relLangURL }}{{ $name | urlize }}">{{ $name }}</a> ({{ len $taxonomy }})</li>
+        {{ range .Data.Terms }}
+          <li><a href="{{ .Page.RelPermalink }}">{{ .Page.Title }}</a> ({{ .Count }})</li>
         {{ end }}
       </ul>
     </div>
