--- a/layouts/partials/post-metadata.html
+++ b/layouts/partials/post-metadata.html
@@ -1,14 +1,15 @@
-<!-- supports emoji -->
-<h2 class="title"><a href="{{ .Permalink }}">{{ .Title | emojify }}</a>{{ if .Draft }}::Draft{{ end }}</h2>
 <div class="post-metadata">
-  <p class="text-muted">{{ .Params.subtitle }}</p>
-  <div class="text-muted"><i class="fa fa-calendar" aria-hidden="true"></i> {{ .Date.Format "January 2, 2006" }}</div>
+  <div class="text-muted">
+    <i class="fa fa-calendar" aria-hidden="true"></i> {{ .Date.Format "January 2, 2006" }}
+  </div>
+
   {{ if .Params.categories }}
     <div class="text-muted">
       <i class="fa fa-folder" aria-hidden="true"></i>
       <a class="button is-link code" href="{{ "/categories/" | relURL }}{{ .Params.categories | urlize }}">{{ .Params.categories | emojify }}</a>
     </div>
   {{ end }}
+
   {{ if .Params.tags }}
     {{ partial "tags" .Params.tags }}
   {{ end }}
