Modify title tag not to show taxonomies

--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -4,15 +4,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 {{ if .IsPage }}
+<title>{{ .Title }}</title>
+<meta property="og:title" content="{{ .Title }}" />
 <meta name="description" content="{{ .Summary }}">
 <meta property="og:description" content="{{ .Summary }}" />
 {{ else }}
+<title>{{ .Site.Title }}</title>
+<meta property="og:title" content="{{ .Site.Title }}" />
 <meta name="description" content="{{ .Site.Params.Description }}">
 <meta property="og:description" content="{{ .Site.Params.Description }}" />
 {{ end }}
 
 <meta property="og:url" content="{{ .Permalink }}" />
-<meta property="og:title" content="{{ .Title }}" />
 
 {{ if .Params.banner }}
 <meta property="og:image" content="{{ .Permalink }}banner.png" />
