Change analytics.js -> gtag.js

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,6 +6,6 @@
       </div>
     </div>
     {{ partial "javascript.html" . }}
-    {{ partial "analytics.html" . }}
+    <!-- {{ partial "analytics.html" . }} -->
   </body>
 </html>
