--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html class="no-js" lang="ja" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
 <head>
+    {{ partial "gtag.html" .}}
+
     {{ partial "meta.html" . }}
 
     {{ partial "favicons.html" . }}
