Add blog name to title

--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 {{ if .IsPage }}
-<title>{{ .Title }}</title>
+<title>{{ .Title }} - JD2xor's Blog</title>
 <meta property="og:title" content="{{ .Title }}" />
 <meta name="description" content="{{ .Summary }}">
 <meta property="og:description" content="{{ .Summary }}" />
