--- a/layouts/shortcodes/amazon.html
+++ b/layouts/shortcodes/amazon.html
@@ -12,6 +12,6 @@
       <div class="link-widget-description"></div>
       <div class="link-widget-host">{{ $host }}</div>
     </div>
-    <div class="link-widget-thumbnail" style="background-image: url({{$image}});"></div>
+    <div class="link-widget-thumbnail images-amazon" style="background-image: url({{$image}});"></div>
   </a>
 </div>
